made many changes

--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -58,7 +58,7 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
-          <span style="color: black;">Saaswad</span>
+          <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
           <div class="header-info-box">
@@ -66,7 +66,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9919911000</h6>
+              <h6>+91 9839837999</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -75,7 +75,7 @@
               <img src="img/icons/map-marker.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>B-38/47 PR,Tulsipur</h6>
+              <h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
               <p>
                 Mahmoorganj,Varanasi Uttar Pradesh,India-221010
               </p>
@@ -122,7 +122,7 @@
               orci purus, sodales in est quis, blandit sollicitudin est. Nam
               ornare ipsum ac accumsan auctor.
             </p> -->
-            <a href="" class="site-btn">Contact us</a>
+            <a href="#mission" class="site-btn">Discover</a>
           </div>
         </div>
       </div>
@@ -130,34 +130,73 @@
     <!-- Page top section end  -->
 
     <!-- About section -->
-    <section class="about-section spad">
+    <section id="mission" class="team-section spad">
       <div class="container">
+        <div class="team-text">
+          <h2 style="font-weight: bolder;">
+            Our <span style="color: red;">Vision</span>, Mission and
+            <span style="color: red;">Goal</span>
+          </h2>
+          <!-- <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+            orci purus, sodales in est quis, blandit sollicitudin est. Nam
+            ornare ipsum ac accumsan auctor. Donec consequat arcu et commodo
+            interdum. Vivamus posuere lorem lacus.Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Quisque orci purus, sodales in est
+            quis, blandit sollicitudin est.
+          </p> -->
+        </div>
         <div class="row">
-          <div class="col-lg-6">
-            <img src="img/Director.JPG" alt="" />
+          <div class="col-md-4">
+            <div class="team-member">
+              <!-- <img src="img/team/1.jpg" alt="" /> -->
+              <div class="member-info">
+                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                  Our Vision
+                </h3>
+                <p style="font-size: 1rem;">
+                  Our Vision is to be a global leader in the manufacturing of
+                  high-quality heat transfer equipment and sheet metal
+                  equipment.
+                </p>
+                <!-- <a href="#" class="site-btn">See C.V.</a> -->
+              </div>
+            </div>
           </div>
-          <div class="col-lg-6">
-            <div class="about-text">
-              <h2>Director's Remarks</h2>
-              <p>
-                "WE WANT TO GROW AND LOOK TO DEVELOP NEW PRODUCTS TO MEET
-                DOMESTIC AS WELL AS INTERNATIONAL MARKETS. WE ARE READY TO SERVE
-                OUR CUSTOMERS WITH WORLD-CLASS PRODUCTS"
-              </p>
-              <div class="about-sign">
-                <!-- <div class="sign">
-                  <img src="img/sign.png" alt="" />
-                </div> -->
-                <div class="sign-info">
-                  <h5>Mr. Rai Ashwani Kumar</h5>
-                  <span>Managing Director</span>
-                </div>
+          <div class="col-md-4">
+            <div class="team-member">
+              <!-- <img src="img/team/1.jpg" alt="" /> -->
+              <div class="member-info">
+                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                  Our Mission
+                </h3>
+                <p style="font-size: 1rem;">
+                  Our Mission is to build and supply optimized quality heat
+                  transfer equipment for diesel, gas and electric application.
+                </p>
+                <!-- <a href="#" class="site-btn">See C.V.</a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-member">
+              <!-- <img src="img/team/1.jpg" alt="" /> -->
+              <div class="member-info">
+                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                  Our Goal
+                </h3>
+                <p style="font-size: 1rem;">
+                  Our Goal is to provide the best solution for our customers in
+                  order to achieve customer delight.
+                </p>
+                <!-- <a href="#" class="site-btn">See C.V.</a> -->
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- About section end -->
 
     <!-- Milestones section -->
@@ -225,66 +264,28 @@
     <!-- Milestones section end -->
 
     <!-- Team section -->
-    <section class="team-section spad">
+    <section class="about-section spad">
       <div class="container">
-        <div class="team-text">
-          <h2 style="font-weight: bolder;">
-            Our <span style="color: red;">Vision</span>, Mission and
-            <span style="color: red;">Goal</span>
-          </h2>
-          <!-- <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-            orci purus, sodales in est quis, blandit sollicitudin est. Nam
-            ornare ipsum ac accumsan auctor. Donec consequat arcu et commodo
-            interdum. Vivamus posuere lorem lacus.Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Quisque orci purus, sodales in est
-            quis, blandit sollicitudin est.
-          </p> -->
-        </div>
         <div class="row">
-          <div class="col-md-4">
-            <div class="team-member">
-              <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
-                  Our Vision
-                </h3>
-                <p style="font-size: 1rem;">
-                  Our Vision is to be a global leader in the manufacturing of
-                  high-quality heat transfer equipment and sheet metal
-                  equipment.
-                </p>
-                <!-- <a href="#" class="site-btn">See C.V.</a> -->
-              </div>
-            </div>
+          <div class="col-lg-6">
+            <img src="img/Director.JPG" alt="" />
           </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
-                  Our Mission
-                </h3>
-                <p style="font-size: 1rem;">
-                  Our Mission is to build and supply optimized quality heat
-                  transfer equipment for diesel, gas and electric application.
-                </p>
-                <!-- <a href="#" class="site-btn">See C.V.</a> -->
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-member">
-              <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info">
-                <h3 style="font-size: 2rem; margin-bottom: 20px;">
-                  Our Goal
-                </h3>
-                <p style="font-size: 1rem;">
-                  Our Goal is to provide the best solution for our customers in
-                  order to achieve customer delight.
-                </p>
-                <!-- <a href="#" class="site-btn">See C.V.</a> -->
+          <div class="col-lg-6">
+            <div class="about-text">
+              <h2>Director's Remarks</h2>
+              <p>
+                "WE WANT TO GROW AND LOOK TO DEVELOP NEW PRODUCTS TO MEET
+                DOMESTIC AS WELL AS INTERNATIONAL MARKETS. WE ARE READY TO SERVE
+                OUR CUSTOMERS WITH WORLD-CLASS PRODUCTS"
+              </p>
+              <div class="about-sign">
+                <!-- <div class="sign">
+                  <img src="img/sign.png" alt="" />
+                </div> -->
+                <div class="sign-info">
+                  <h5>Mr. Rai Ashwani Kumar</h5>
+                  <span>Managing Director</span>
+                </div>
               </div>
             </div>
           </div>
@@ -309,6 +310,21 @@
     <!-- Call to action section end  -->
 
     <!-- Footer section -->
+    <div class="footer-buttom">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 order-1 order-lg-2 p-0">
+            <ul class="footer-menu text-center">
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="about.html">About us</a></li>
+              <li><a href="solutions.html">Products</a></li>
+              <li><a href="blog.html">Facilities</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer-section spad">
       <div class="container">
         <div class="row">
@@ -324,11 +340,15 @@
                 <span class="fw-title">Saaswad</span>
               </div>
               <p>
-                We Manufacture 100% Locally and Independentally
+                We introduce ourselves as one of the Leading Manufacturers of
+                Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
+                Air Coolers in India. We are known for manufacturing quality
+                products and providing complete solutions through technical
+                expertise and after-sales service to our customers.
               </p>
               <div class="footer-social">
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-envelope"></i></a>
+                <a href=""><i class="fa fa-google"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -405,16 +425,14 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | Saaswad
+                | Saaswad Heat Transfer Private Limited
               </div>
             </div>
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About us</a></li>
-                <li><a href="solutions.html">Products</a></li>
-                <li><a href="blog.html">Facilities</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li>
+                  <a href="http://technoborg.in/">Made By - Team Technoborg</a>
+                </li>
               </ul>
             </div>
           </div>
