--- a/industryinc/blog2.html
+++ b/industryinc/blog2.html
@@ -38,24 +38,23 @@
 
     <!-- Header section  -->
     <header class="header-section clearfix">
-      <div class="header-top">
+      <!-- <div class="header-top">
         <div class="container-fluid">
-          <!--<div class="row">
-					<div class="col-md-6">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-					</div>
-					<div class="col-md-6 text-md-right">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-					</div>
-                </div>
-            -->
+          <div class="row">
+            <div class="col-md-6">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="col-md-6 text-md-right">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
         </div>
-      </div>
+      </div> -->
       <div class="site-navbar">
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
-          <span style="color: black;">Saaswad</span>
+          <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
           <div class="header-info-box">
@@ -72,11 +71,13 @@
               <img src="img/icons/map-marker.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>B-38/47 PR,Tulsipur</h6>
-              <p>Mahmoorganj,Varanasi Uttar Pradesh,India-221010</p>
+              <h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
+              <p>
+                Mahmoorganj,Varanasi Uttar Pradesh,India-221010
+              </p>
             </div>
           </div>
-          <button class="search-switch"><i class="fa fa-search"></i></button>
+          <!-- <button class="search-switch"><i class="fa fa-search"></i></button> -->
         </div>
         <!-- Menu -->
         <nav class="site-nav-menu">
@@ -84,10 +85,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li>
-              <a href="solutions.html">Solutions</a>
-              <ul class="sub-menu">
-                <li><a href="elements.html">Elements</a></li>
-              </ul>
+              <a href="solutions.html">Products</a>
             </li>
             <li class="active"><a href="blog.html">Facilities</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -314,6 +312,21 @@
     <!-- Call to action section end  -->
 
     <!-- Footer section -->
+    <div class="footer-buttom">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 order-1 order-lg-2 p-0">
+            <ul class="footer-menu text-center">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="solutions.html">Products</a></li>
+              <li class="active"><a href="blog.html">Facilities</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer-section spad">
       <div class="container">
         <div class="row">
@@ -329,13 +342,17 @@
                 <span class="fw-title">Saaswad</span>
               </div>
               <p>
-                We Manufacture 100% Locally and Independentally
+                We introduce ourselves as one of the Leading Manufacturers of
+                Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
+                Air Coolers in India. We are known for manufacturing quality
+                products and providing complete solutions through technical
+                expertise and after-sales service to our customers.
               </p>
               <div class="footer-social">
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-envelope"></i></a>
+                <a href=""><i class="fa fa-google"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
-				  <a href=""><i class="fa fa-behance"></i></a> -->
+                <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
             </div>
           </div>
@@ -350,7 +367,7 @@
                 </li>
                 <li>Turbo After Cooler</li>
                 <!-- <li><a href="">Oil Extractions</a></li>
-				  <li><a href="">About our Work</a></li> -->
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
@@ -393,9 +410,9 @@
                 </div>
               </div>
               <!-- <form class="footer-search">
-				  <input type="text" placeholder="Search" />
-				  <button><i class="fa fa-search"></i></button>
-				</form> -->
+                <input type="text" placeholder="Search" />
+                <button><i class="fa fa-search"></i></button>
+              </form> -->
             </div>
           </div>
         </div>
@@ -410,16 +427,14 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | Saaswad
+                | Saaswad Heat Transfer Private Limited
               </div>
             </div>
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="solutions.html">Products</a></li>
-                <li class="active"><a href="blog.html">Facilities</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li>
+                  <a href="http://technoborg.in/">Made By - Team Technoborg</a>
+                </li>
               </ul>
             </div>
           </div>
