--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -37,56 +37,61 @@
 
 	<!-- Header section  -->
 	<header class="header-section clearfix">
-		<div class="header-top">
-			<div class="container-fluid">
-				
-				</div>
+		<!-- <div class="header-top">
+		  <div class="container-fluid">
+			<div class="row">
+			  <div class="col-md-6">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			  <div class="col-md-6 text-md-right">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
 			</div>
-		</div>  
+		  </div>
+		</div> -->
 		<div class="site-navbar">
-			<!-- Logo -->
-			<a href="index.html" class="site-logo">
-				<img src="img/logo_saswad.png" height="80" alt="">
-				<span style="color: black;">Saaswad</span>
-			  </a>
-			<div class="header-right">
-				<div class="header-info-box">
-					<div class="hib-icon">
-						<img src="img/icons/phone.png" alt="" class="">
-					</div>
-					<div class="hib-text">
-						<h6> +91 9839837999</h6>
-						<p>info@saaswad.com</p>
-					</div>
-				</div>
-				<div class="header-info-box">
-					<div class="hib-icon">
-						<img src="img/icons/map-marker.png" alt="" class="">
-					</div>
-					<div class="hib-text">
-						<h6>B-38/47 PR,Tulsipur</h6>
-						<p>Mahmoorganj,Varanasi Uttar Pradesh,India-221010</p>
-					</div>
-				</div>
-				<button class="search-switch"><i class="fa fa-search"></i></button>
+		  <!-- Logo -->
+		  <a href="index.html" class="site-logo">
+			<img src="img/logo_saswad.png" height="80" alt="" />
+			<!-- <span style="color: black;">Saaswad</span> -->
+		  </a>
+		  <div class="header-right">
+			<div class="header-info-box">
+			  <div class="hib-icon">
+				<img src="img/icons/phone.png" alt="" class="" />
+			  </div>
+			  <div class="hib-text">
+				<h6>+91 9839837999</h6>
+				<p>info@saaswad.com</p>
+			  </div>
 			</div>
-			<!-- Menu -->
-			<nav class="site-nav-menu">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About us</a></li>
-					<li><a href="solutions.html">Solutions</a>
-						<ul class="sub-menu">
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</li>
-					<li><a href="blog.html">Blog</a></li>
-					<li class="active"><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
-
+			<div class="header-info-box">
+			  <div class="hib-icon">
+				<img src="img/icons/map-marker.png" alt="" class="" />
+			  </div>
+			  <div class="hib-text">
+				<h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
+				<p>
+				  Mahmoorganj,Varanasi Uttar Pradesh,India-221010
+				</p>
+			  </div>
+			</div>
+			<!-- <button class="search-switch"><i class="fa fa-search"></i></button> -->
+		  </div>
+		  <!-- Menu -->
+		  <nav class="site-nav-menu">
+			<ul>
+			  <li ><a href="index.html">Home</a></li>
+			  <li><a href="about.html">About us</a></li>
+			  <li>
+				<a href="solutions.html">Products</a>
+			  </li>
+			  <li><a href="blog.html">Facilities</a></li>
+			  <li class="active"><a href="contact.html">Contact</a></li>
+			</ul>
+		  </nav>
 		</div>
-	</header>
+	  </header>
 	<!-- Header section end  -->
 	
 	<!-- Page top section  -->
@@ -218,7 +223,22 @@
 	<!-- Call to action section end  -->
 
 	<!-- Footer section -->
-	<footer class="footer-section spad">
+	<div class="footer-buttom">
+		<div class="container">
+		  <div class="row">
+			<div class="col-lg-12 order-1 order-lg-2 p-0">
+			  <ul class="footer-menu text-center">
+				<li><a href="index.html">Home</a></li>
+				<li ><a href="about.html">About us</a></li>
+				<li><a href="solutions.html">Products</a></li>
+				<li><a href="blog.html">Facilities</a></li>
+				<li class="active"><a href="contact.html">Contact</a></li>
+			  </ul>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	  <footer class="footer-section spad">
 		<div class="container">
 		  <div class="row">
 			<div class="col-lg-3 col-md-6">
@@ -233,11 +253,15 @@
 				  <span class="fw-title">Saaswad</span>
 				</div>
 				<p>
-				  We Manufacture 100% Locally and Independentally
+				  We introduce ourselves as one of the Leading Manufacturers of
+				  Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
+				  Air Coolers in India. We are known for manufacturing quality
+				  products and providing complete solutions through technical
+				  expertise and after-sales service to our customers.
 				</p>
 				<div class="footer-social">
-				  <a href=""><i class="fa fa-facebook"></i></a>
-				  <a href=""><i class="fa fa-twitter"></i></a>
+				  <a href=""><i class="fa fa-envelope"></i></a>
+				  <a href=""><i class="fa fa-google"></i></a>
 				  <!-- <a href=""><i class="fa fa-dribbble"></i></a>
 				  <a href=""><i class="fa fa-behance"></i></a> -->
 				</div>
@@ -314,16 +338,14 @@
 				  <script>
 					document.write(new Date().getFullYear());
 				  </script>
-				  All rights reserved | Saaswad
+				  | Saaswad Heat Transfer Private Limited
 				</div>
 			  </div>
 			  <div class="col-lg-7 order-1 order-lg-2 p-0">
 				<ul class="footer-menu">
-				  <li ><a href="index.html">Home</a></li>
-				  <li><a href="about.html">About us</a></li>
-				  <li><a href="solutions.html">Products</a></li>
-				  <li><a href="blog.html">Facilities</a></li>
-				  <li class="active"><a href="contact.html">Contact</a></li>
+				  <li>
+					<a href="http://technoborg.in/">Made By - Team Technoborg</a>
+				  </li>
 				</ul>
 			  </div>
 			</div>
