--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="SAASWAD.com" />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/3dfb4ae469.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Favicon -->
     <link href="img/logo_saswad.png" rel="shortcut icon" />
@@ -30,12 +34,53 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #scroll {
+        position: fixed;
+        right: 10px;
+        bottom: 10px;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        background-color: black;
+        text-indent: -9999px;
+        display: none;
+        -webkit-border-radius: 60px;
+        -moz-border-radius: 60px;
+        border-radius: 60px;
+      }
+      #scroll span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -8px;
+        margin-top: -12px;
+        height: 0;
+        width: 0;
+        border: 8px solid transparent;
+        border-bottom-color: #ffffff;
+      }
+      #scroll:hover {
+        background-color: red;
+        opacity: 1;
+        filter: "alpha(opacity=100)";
+        -ms-filter: "alpha(opacity=100)";
+      }
+      .bg-img {
+        width: 100%;
+        padding: 10% 0;
+        background-size: cover;
+        background-position: center;
+        border: 1px solid;
+      }
+    </style>
   </head>
   <body>
     <!-- Page Preloder -->
     <div id="preloder">
       <div class="loader"></div>
     </div>
+    <a href="#" id="scroll" style="display: none;"><span></span></a>
 
     <!-- Header section  -->
     <header class="header-section clearfix">
@@ -55,7 +100,7 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
-          <span style="color: black;">Saaswad</span>
+          <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
           <div class="header-info-box">
@@ -63,7 +108,7 @@
               <img src="img/icons/phone.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>+91 9919911000</h6>
+              <h6>+91 9839837999</h6>
               <p>info@saaswad.com</p>
             </div>
           </div>
@@ -72,7 +117,7 @@
               <img src="img/icons/map-marker.png" alt="" class="" />
             </div>
             <div class="hib-text">
-              <h6>B-38/47 PR,Tulsipur</h6>
+              <h6>Corporate Office-B-38/47 PR,Tulsipur</h6>
               <p>
                 Mahmoorganj,Varanasi Uttar Pradesh,India-221010
               </p>
@@ -98,8 +143,36 @@
 
     <!-- Hero section  -->
     <section class="hero-section">
-      <div class="hero-slider owl-carousel">
-        <div class="hero-item set-bg" data-setbg="img/home_cover1.jpg">
+      <!-- <div class="hero-slider owl-carousel"> -->
+      <div
+        class="hero-item bg-img"
+        style="background-image: url('img/home_cover1.jpg');"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-8">
+              <h2 style="opacity: inherit;">
+                <span style="background-color: rgba(0, 0, 0, 0.3);"
+                  >Saaswad Heat Transfer And Engineering</span
+                >
+              </h2>
+              <a
+                style="opacity: inherit;"
+                href="#products"
+                class="site-btn sb-white mr-4 mb-3"
+                >Read More</a
+              >
+              <a
+                style="opacity: inherit;"
+                href="solutions.html"
+                class="site-btn sb-dark"
+                >Products</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="hero-item set-bg" data-setbg="img/home_cover2.jpg">
           <div class="container">
             <div class="row">
               <div class="col-xl-8">
@@ -109,32 +182,17 @@
                   >
                 </h2>
                 <a href="#" class="site-btn sb-white mr-4 mb-3">Read More</a>
-                <a href="#" class="site-btn sb-dark">Products</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="hero-item set-bg" data-setbg="img/home_cover2.jpg">
-          <div class="container">
-            <div class="row">
-              <div class="col-xl-8">
-                <h2>
-                  <span style="background-color: rgba(0, 0, 0, 0.3);"
-                    >India's Leading Industry Corporation</span
-                  >
-                </h2>
-                <a href="#" class="site-btn sb-white mr-4 mb-3">Read More</a>
                 <a href="#" class="site-btn sb-dark">our Services</a>
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
     </section>
     <!-- Hero section end  -->
 
     <!-- Services section  -->
-    <section class="services-section">
+    <section id="products" class="services-section">
       <div class="services-warp">
         <div class="container">
           <div class="row">
@@ -266,20 +324,7 @@
               Some of the Prestigious Industries We Serve
             </h2>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="feature-box">
-              <img src="img/company1.jpg" alt="" />
-              <div class="fb-text">
-                <h5>Greaves Cotton Ltd.</h5>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipi-scing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor.
-                </p>
-                <!-- <a href="" class="fb-more-btn">Read More</a> -->
-              </div>
-            </div>
-          </div>
+
           <div class="col-lg-4 col-md-6">
             <div class="feature-box">
               <img src="img/company2.jpg" alt="" />
@@ -299,6 +344,20 @@
               <img src="img/company3.jpg" alt="" />
               <div class="fb-text">
                 <h5>Cummins India Ltd.</h5>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipi-scing elit.
+                  Quisque orci purus, sodales in est quis, blandit sollicitudin
+                  est. Nam ornare ipsum ac accumsan auctor.
+                </p>
+                <!-- <a href="" class="fb-more-btn">Read More</a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-box">
+              <img src="img/company1.jpg" alt="" />
+              <div class="fb-text">
+                <h5>Greaves Cotton Ltd.</h5>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipi-scing elit.
                   Quisque orci purus, sodales in est quis, blandit sollicitudin
@@ -447,19 +506,26 @@
           <div class="col-lg-6">
             <div class="video-text">
               <h2>We produce or supply Goods, & Services</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-                orci purus, sodales in est quis, blandit sollicitudin est. Nam
-                ornare ipsum ac accumsan auctor. Donec consequat arcu et commodo
-                interdum. Vivamus posuere lorem lacus.Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Quisque orci purus, sodales
-                in est quis, blandit sollicitudin est. Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Quisque orci purus, sodales
-                in est quis, blandit sollicitudin est. Nam ornare ipsum ac
-                accumsan auctor. Donec consequat arcu et commodo interdum.
-                Vivamus posuere lorem lacus.Lorem ipsum dolor sit amet,
-                consectetur.
-              </p>
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-6 text-center">
+                    <i style="font-size: 3em;" class="far fa-check-circle"></i>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam mollitia architecto distinctio itaque, laboriosam
+                      doloribus sunt maxime provident! Expedita, quisquam.
+                    </p>
+                  </div>
+                  <div class="col-lg-6 text-center">
+                    <i style="font-size: 3em;" class="far fa-check-circle"></i>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Voluptas beatae sit deserunt nihil, voluptatem eveniet
+                      obcaecati possimus commodi officia repellat.
+                    </p>
+                  </div>
+                </div>
+              </div>
               <a href="#" class="site-btn">contact us</a>
             </div>
           </div>
@@ -479,6 +545,21 @@
     <!-- Video section end  -->
 
     <!-- Footer section -->
+    <div class="footer-buttom">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 order-1 order-lg-2 p-0">
+            <ul class="footer-menu text-center">
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="solutions.html">Products</a></li>
+              <li><a href="blog.html">Facilities</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer-section spad">
       <div class="container">
         <div class="row">
@@ -494,11 +575,15 @@
                 <span class="fw-title">Saaswad</span>
               </div>
               <p>
-                We Manufacture 100% Locally and Independentally
+                We introduce ourselves as one of the Leading Manufacturers of
+                Industrial Radiators, Oil Coolers, Heat Exchangers and Charged
+                Air Coolers in India. We are known for manufacturing quality
+                products and providing complete solutions through technical
+                expertise and after-sales service to our customers.
               </p>
               <div class="footer-social">
-                <a href=""><i class="fa fa-facebook"></i></a>
-                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-envelope"></i></a>
+                <a href=""><i class="fa fa-google"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -575,16 +660,14 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | Saaswad
+                | Saaswad Heat Transfer Private Limited
               </div>
             </div>
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="solutions.html">Products</a></li>
-                <li><a href="blog.html">Facilities</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li>
+                  <a href="http://technoborg.in/">Made By - Team Technoborg</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -603,6 +686,17 @@
       </div>
     </div> -->
     <!-- Search model end -->
+    <script>
+      var images = new Array("img/home_cover2.jpg", "img/home_cover1.jpg");
+
+      var slider = setInterval(function () {
+        document
+          .getElementsByClassName("bg-img")[0]
+          .setAttribute("style", 'background-image: url("' + images[0] + '")');
+        images.splice(images.length, 0, images[0]);
+        images.splice(0, 1);
+      }, 3000);
+    </script>
 
     <!--====== Javascripts & Jquery ======-->
     <script src="js/jquery-3.2.1.min.js"></script>
@@ -612,5 +706,20 @@
     <script src="js/circle-progress.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/main.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(window).scroll(function () {
+          if ($(this).scrollTop() > 100) {
+            $("#scroll").fadeIn();
+          } else {
+            $("#scroll").fadeOut();
+          }
+        });
+        $("#scroll").click(function () {
+          $("html, body").animate({ scrollTop: 0 }, 600);
+          return false;
+        });
+      });
+    </script>
   </body>
 </html>
