--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -29,12 +29,147 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      #scroll {
+        position: fixed;
+        right: 10px;
+        bottom: 10px;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        background-color: black;
+        text-indent: -9999px;
+        display: none;
+        -webkit-border-radius: 60px;
+        -moz-border-radius: 60px;
+        border-radius: 60px;
+      }
+      #scroll span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -8px;
+        margin-top: -12px;
+        height: 0;
+        width: 0;
+        border: 8px solid transparent;
+        border-bottom-color: #ffffff;
+      }
+      #scroll:hover {
+        background-color: red;
+        opacity: 1;
+        filter: "alpha(opacity=100)";
+        -ms-filter: "alpha(opacity=100)";
+      }
+      [type="radio"] {
+        display: none;
+      }
+
+      #slider {
+        height: 35vw;
+        position: relative;
+        perspective: 1000px;
+        transform-style: preserve-3d;
+      }
+
+      #slider label {
+        margin: auto;
+        width: 60%;
+        height: 100%;
+        border-radius: 4px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        cursor: pointer;
+        transition: transform 0.4s ease;
+      }
+
+      #s1:checked ~ #slide4,
+      #s2:checked ~ #slide5,
+      #s3:checked ~ #slide1,
+      #s4:checked ~ #slide2,
+      #s5:checked ~ #slide3 {
+        box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+        transform: translate3d(-30%, 0, -200px);
+      }
+
+      #s1:checked ~ #slide5,
+      #s2:checked ~ #slide1,
+      #s3:checked ~ #slide2,
+      #s4:checked ~ #slide3,
+      #s5:checked ~ #slide4 {
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3),
+          0 2px 2px 0 rgba(0, 0, 0, 0.2);
+        transform: translate3d(-15%, 0, -100px);
+      }
+
+      #s1:checked ~ #slide1,
+      #s2:checked ~ #slide2,
+      #s3:checked ~ #slide3,
+      #s4:checked ~ #slide4,
+      #s5:checked ~ #slide5 {
+        box-shadow: 0 13px 25px 0 rgba(0, 0, 0, 0.3),
+          0 11px 7px 0 rgba(0, 0, 0, 0.19);
+        transform: translate3d(0, 0, 0);
+      }
+
+      #s1:checked ~ #slide2,
+      #s2:checked ~ #slide3,
+      #s3:checked ~ #slide4,
+      #s4:checked ~ #slide5,
+      #s5:checked ~ #slide1 {
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.3),
+          0 2px 2px 0 rgba(0, 0, 0, 0.2);
+        transform: translate3d(15%, 0, -100px);
+      }
+
+      #s1:checked ~ #slide3,
+      #s2:checked ~ #slide4,
+      #s3:checked ~ #slide5,
+      #s4:checked ~ #slide1,
+      #s5:checked ~ #slide2 {
+        box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+        transform: translate3d(30%, 0, -200px);
+      }
+
+      #slide1 {
+        background-image: url("img/punching_machine.jpg");
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        background-size: cover;
+      }
+      #slide2 {
+        background-image: url("img/punching_machine.jpg");
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        background-size: cover;
+      }
+      #slide3 {
+        background-image: url("img/punching_machine.jpg");
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        background-size: cover;
+      }
+      #slide4 {
+        background-image: url("img/punching_machine.jpg");
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        background-size: cover;
+      }
+      #slide5 {
+        background-image: url("img/punching_machine.jpg");
+        background-repeat: no-repeat;
+        /* background-position: center; */
+        background-size: cover;
+      }
+    </style>
   </head>
   <body>
     <!-- Page Preloder -->
     <div id="preloder">
       <div class="loader"></div>
     </div>
+    <a href="#" id="scroll" style="display: none;"><span></span></a>
 
     <!-- Header section  -->
     <header class="header-section clearfix">
@@ -100,7 +235,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
-            <h2><center>Our Facilities</center></h2>
+            <h2>Our Facilities</h2>
+            <a href="#products" class="site-btn">Know more</a>
             <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque orci purus, sodales in est quis, blandit sollicitudin est. Nam ornare ipsum ac accumsan auctor. </p>
 					
 						<a href="" class="site-btn">Contact us</a>
@@ -110,9 +246,21 @@
       </div>
     </section>
     <!-- Page top section end  -->
+    <!-- <section id="slider">
+      <input type="radio" name="slider" id="s1" />
+      <input type="radio" name="slider" id="s2" />
+      <input type="radio" name="slider" id="s3" checked />
+      <input type="radio" name="slider" id="s4" />
+      <input type="radio" name="slider" id="s5" />
+      <label for="s1" id="slide1"></label>
+      <label for="s2" id="slide2"></label>
+      <label for="s3" id="slide3"></label>
+      <label for="s4" id="slide4"></label>
+      <label for="s5" id="slide5"></label>
+    </section> -->
 
     <!-- Blog section  -->
-    <section class="blog-section spad">
+    <section id="products" class="blog-section spad">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6 sidebar order-2 order-lg-1">
@@ -399,7 +547,7 @@
                 </div>
                 <div class="fib-text">
                   <p>
-                    +91 9919911000<br />
+                    +91 9839837999<br />
                     info@saaswad.com
                   </p>
                 </div>
@@ -457,5 +605,20 @@
     <script src="js/circle-progress.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/main.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(window).scroll(function () {
+          if ($(this).scrollTop() > 100) {
+            $("#scroll").fadeIn();
+          } else {
+            $("#scroll").fadeOut();
+          }
+        });
+        $("#scroll").click(function () {
+          $("html, body").animate({ scrollTop: 0 }, 600);
+          return false;
+        });
+      });
+    </script>
   </body>
 </html>
