--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Industry.INC | HTML Template</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Industry.INC HTML Template" />
-    <meta name="keywords" content="industry, html" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+  	<title>SAASWAD</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="SAASWAD.com">
+	<meta name="keywords" content="industry, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- Favicon -->
+    <link href="img/logo_saswad.png" rel="shortcut icon" />
 
     <!-- Google font -->
     <link
@@ -134,7 +134,30 @@
     <!-- Header section end  -->
 
     <!-- Page top section  -->
+
     <section
+      class="page-top-section"
+      style="
+        min-height: 100%;
+        background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.3)
+          ),
+          url(img/our_facilities.jpg);
+        background-size: cover;
+      "
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7">
+            <h2>Our Facilities</h2>
+            <a href="#products" class="site-btn">Know more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section
       class="page-top-section set-bg"
       data-setbg="img/page-top-bg/3.jpg"
       style="margin-bottom: 100px;"
@@ -144,14 +167,14 @@
           <div class="col-lg-7">
             <h2>Our Facilities</h2>
             <a href="#products" class="site-btn">Know more</a>
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque orci purus, sodales in est quis, blandit sollicitudin est. Nam ornare ipsum ac accumsan auctor. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque orci purus, sodales in est quis, blandit sollicitudin est. Nam ornare ipsum ac accumsan auctor. </p>
 					
 						<a href="" class="site-btn">Contact us</a>
-						-->
+						
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Page top section end  -->
 
     <script src="js/jssor.slider-28.0.0.min.js" type="text/javascript"></script>
@@ -555,6 +578,33 @@
         </div>
         <div>
           <img class="img-slide" data-u="image" src="img/oven.jpg" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility1.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility2.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility3.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility4.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility5.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility6.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility7.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility8.JPG" />
+        </div>
+        <div>
+          <img class="img-slide" data-u="image" src="img/facility9.JPG" />
         </div>
       </div>
       <a
