--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-  	<title>SAASWAD</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="SAASWAD.com">
-	<meta name="keywords" content="industry, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-	<!-- Favicon -->
+    <title>SAASWAD</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="SAASWAD.com" />
+    <meta name="keywords" content="industry, html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
     <link href="img/logo_saswad.png" rel="shortcut icon" />
 
     <!-- Google font -->
@@ -176,6 +176,8 @@
       </div>
     </section> -->
     <!-- Page top section end  -->
+
+    <!-- Blog section  -->
 
     <script src="js/jssor.slider-28.0.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -696,8 +698,6 @@
     <script type="text/javascript">
       jssor_1_slider_init();
     </script>
-    <!-- Blog section  -->
-
     <!-- Blog section end  -->
 
     <!-- Call to action section  -->
