--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -288,7 +288,7 @@
 			</div>
 		</div>
 		<div class="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14431.335669906885!2d82.806947!3d25.2761718!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1ef670a29d928d79!2sSaaswad%20Heat%20Transfer%20%26%20Engineering%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1595953386355!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
 	</div>
 	<div class="container"> 
