--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -273,7 +273,7 @@
 	<div class="map-section">
 		<div class="container">
 			<div class="map-info">
-			<center>	<img src="img/logo_saswad.png" width="40px" height="40px" alt="">  </center>
+			<center>	<img src="img/logo_saswadww.png" width="40px" height="40px" alt="">  </center>
 			
 				<p>
 					<ul class="text-white">
@@ -510,8 +510,8 @@
         });
       });
     </script>
-	window, 'load', showGoogleMaps);
-</script>
+	
+
 
 	</body>
 </html>
