--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -147,7 +147,7 @@
             rgba(0, 0, 0, 0.3),
             rgba(0, 0, 0, 0.3)
           ),
-          url(img/train.jpg);
+          url(img/trainnew1.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
       "
@@ -273,7 +273,7 @@
 	<div class="map-section">
 		<div class="container">
 			<div class="map-info">
-			<center>	<img src="img/logo_saswad.png" width="40px" height="40px" alt="">  </center>
+			<center>	<img src="img/logo_saswadw.png" width="40px" height="40px" alt="">  </center>
 			
 				<p>
 					<ul class="text-white">
