--- a/industryinc/solutions.html
+++ b/industryinc/solutions.html
@@ -31,6 +31,7 @@
     <![endif]-->
     <style>
       #scroll {
+        z-index: 999;
         position: fixed;
         right: 10px;
         bottom: 10px;
@@ -76,6 +77,7 @@
       <div class="loader"></div>
     </div>
     <a href="#" id="scroll" style="display: none;"><span></span></a>
+
     <!-- Button trigger modal -->
     <button
       id="model-trigger"
@@ -187,6 +189,9 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
+          <span style="color: black; font-size: large; font-weight: bolder;"
+            >Saaswad</span
+          >
           <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
