--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -35,6 +35,7 @@
     <![endif]-->
     <style>
       #scroll {
+        z-index: 999;
         position: fixed;
         right: 10px;
         bottom: 10px;
@@ -99,6 +100,9 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
+          <span style="color: black; font-size: large; font-weight: bolder;"
+            >Saaswad</span
+          >
           <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
