--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -696,7 +696,7 @@
       <img src="img/facility6.JPG" alt="" width="300" />
       <img src="img/facility7.JPG" alt="" width="300" />
       <img src="img/facility8.JPG" alt="" width="300" />
-      <img src="img/facility9.JPG" alt="" width="300" />
+      <img src="img/facility9.JPG" alt="" width="3 00" />
      
       
     </div>
