--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -114,7 +114,7 @@
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
           <span style="color: black; font-size: large; font-weight: bolder;"
-            >Saaswad</span
+            >Saaswad Heat Transfers Pvt Ltd</span
           >
           <!-- <span style="color: black;">Saaswad</span> -->
         </a>
@@ -155,6 +155,7 @@
         </nav>
       </div>
     </header>
+
     <!-- Header section end  -->
 
     <!-- Hero section  -->
