--- a/industryinc/solutions.html
+++ b/industryinc/solutions.html
@@ -190,8 +190,8 @@
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
           <span style="color: black; font-size: large; font-weight: bolder;"
-            >Saaswad</span
-          >
+          >Saaswad Heat Transfers Pvt Ltd</span
+        >
           <!-- <span style="color: black;">Saaswad</span> -->
         </a>
         <div class="header-right">
