--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -162,11 +162,6 @@
         <div class="row">
           <div class="col-lg-7">
             <h2>About us</h2>
-            <!-- <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-              orci purus, sodales in est quis, blandit sollicitudin est. Nam
-              ornare ipsum ac accumsan auctor.
-            </p> -->
             <a href="#mission" class="site-btn">Discover</a>
           </div>
         </div>
@@ -179,7 +174,7 @@
       <div class="container">
         <div class="team-text">
           <h2 style="font-weight: bolder;">
-            Our <span style="color: red;">Vision</span>, Mission and
+            Our <span style="color: red;">Vision</span>,<span style="color: red;"> Mission</span> and
             <span style="color: red;">Goal</span>
           </h2>
           <!-- <p>
