--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -159,9 +159,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
-            <h2>Contact</h2>
+            <h2>Contact Us</h2>
 					
-					<a href="#contact-form" class="site-btn">Reach Us</a>
+					<a href="#contact-form" class="site-btn">Get in Touch!</a>
 				</div>
         </div>
       </div>
@@ -216,7 +216,18 @@
 								<div class="hib-text">
 							<p>
 							<h4>UNIT 3</h4>
-							2.Chak no. 249(I),Plot no-1032/1/2,Tehsil-Raja Talab,Dist-Varanasi-221307
+							Chak no. 249(I),Plot no-1032/1/2,Tehsil-Raja Talab,Dist-Varanasi-221307
+						</p>
+						</div>
+					</div>
+					<div class="header-info-box">
+								<div class="hib-icon">
+									<img src="img/icons/map-marker.png" alt="" class="">
+								</div>
+								<div class="hib-text">
+							<p>
+							<h4>UNIT 4</h4>
+							GAT NO.270,BESIDE REBARI COMPLEX, OPP. ALANDI PHATA,NANEKAR WADI, CHAKAN MAHARASHTRA-410501
 						</p>
 						</div>
 					</div>
