added product pages

--- a/industryinc/solutions.html
+++ b/industryinc/solutions.html
@@ -427,11 +427,13 @@
                   Radiators
                 </h2>
                 <img src="img/11.jpg" alt="" width="500" />
-                <a href="./radiator.html"
-                  ><p>
-                    Know more
-                  </p></a
+                <a
+                  style="display: table-caption; margin-top: 10px;"
+                  class="site-btn"
+                  href="./radiator.html"
                 >
+                  Know more
+                </a>
               </div>
               <div
                 class="tab-pane fade"
@@ -443,11 +445,13 @@
                   Mechanically Bonded Radiators
                 </h2>
                 <img src="img/12.jpg" alt="" width="500" />
-                <a href="./mradiator.html"
-                  ><p>
-                    Know more
-                  </p></a
+                <a
+                  style="display: table-caption; margin-top: 10px;"
+                  class="site-btn"
+                  href="./mradiator.html"
                 >
+                  Know more
+                </a>
               </div>
               <div
                 class="tab-pane fade"
@@ -459,11 +463,13 @@
                   Radiator, Oil cooler and AfterCoolers Assembly
                 </h2>
                 <img src="img/13.jpg" alt="" width="500" />
-                <a href="./acooler.html"
-                  ><p>
-                    Know more
-                  </p></a
+                <a
+                  style="display: table-caption; margin-top: 10px;"
+                  class="site-btn"
+                  href="./acooler.html"
                 >
+                  Know more
+                </a>
               </div>
               <div
                 class="tab-pane fade"
@@ -475,11 +481,13 @@
                   Turbo After Cooler
                 </h2>
                 <img src="img/14.jpg" alt="" width="500" />
-                <a href="./tacooler.html"
-                  ><p>
-                    Know more
-                  </p></a
+                <a
+                  style="display: table-caption; margin-top: 10px;"
+                  class="site-btn"
+                  href="./tacooler.html"
                 >
+                  Know more
+                </a>
               </div>
             </div>
           </div>
